# tupagoBack

./: .gitignore  .yo-rc-global.json  .yo-rc.json  README.md  banxico.jdl  banxico.txt  build.gradle  gradle.properties  package-lock.json  package.json  settings.gradle  sonar-project.properties  tuPago.jdl
.devcontainer/: devcontainer.json
.jhipster/: AccountUser.json  Bank.json  ClientConnect.json  Transaction.json
gradle/: docker.gradle  profile_dev.gradle  war.gradle
rust/cyper/: Cargo.toml
rust/cyper/src/: main.rs
src/main/docker/: app.yml  jhipster-control-center.yml  monitoring.yml  postgresql.yml  redis-cluster.yml  redis.yml  sonar.yml
src/main/docker/jib/: entrypoint.sh
src/main/docker/redis/: connectRedisCluster.sh
src/main/java/tupago/back/: ApplicationWebXml.java  GeneratedByJHipster.java  TupagoBackApp.java
src/main/resources/: .h2.server.properties  hello.grapgback  logback-spring.xml
src/main/resources/config/: application-dev.yml  application-prod.yml  application.yml  bootstrap.yml
src/main/resources/config/liquibase/: master.xml
src/main/resources/config/tls/: keystore.p12
src/main/resources/schema/: accountuser.graphql  bank.graphql  tupago.graphql
src/main/webapp/: index.html  manifest.webapp
src/main/webapp/app/config/: dayjs.ts  notification-middleware.ts  translation.ts
src/main/webapp/app/entities/: menu.tsx  reducers.ts  (+1 more)
src/main/webapp/swagger-ui/: index.html
src/test/resources/: junit-platform.properties  logback.xml
src/test/resources/config/: application.yml
webpack/: webpack.common.js  webpack.dev.js
(+210 files in other folders)
