[package]
name = "cyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rust-crypto = "0.2.0"
rand = "0.8.5"
#aes = { version = "0.8.3", features = ["zeroize"] }
#cipher = "0.4.4"
#ghash = "0.5.0"
#zeroize = { version = "1.6.0", features = ["zeroize_derive"] }

#[dev-dependencies]
#hex = "0.4.3"
#benchmark-simple = "0.1.8"
#aes-gcm = { version = "0.10.2", features = ["zeroize"] }
